<resources>

    <!--Application-->
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign Out</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>

    <!--Auth-->
    <string name="auth_failed">Sign in failed.</string>
    <string name="user_id">userId</string>

    <!--EditItem-->
    <string name="title_activity_edit_item">Edit</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="image_capture_failed">Image capture failed</string>
    <string name="menu_select_image">Select Image</string>
    <string name="menu_delete_item">Delete Item</string>
    <string name="delete_item_success">Item Deleted</string>
    <string name="delete_item_undo_success">Item Restored</string>
    <string name="delete_item_undo">Undo</string>
    <string name="edit_purchase_details_title">Purchase Details</string>
    <string name="edit_item_details_title">Item Details</string>
    <string name="edit_purchase_date_title">Purchase Date</string>
    <string name="edit_date_today">Today</string>
    <string name="edit_date_yesterday">Yesterday</string>
    <string name="edit_date_custom">Custom</string>
    <string name="edit_date_unknown">Unknown</string>
    <string name="edit_price_paid_hint">Price Paid ($)</string>
    <string name="edit_price_paid_prefix">Paid: $</string>
    <string name="edit_price_paid_empty">\?</string>
    <string name="edit_discount_hint">Discount ($)</string>
    <string name="edit_expiry_date_title">Expiry Date</string>
    <string name="edit_expiry_date_empty">\?</string>
    <string name="edit_date_format">dd/MMM/yy</string>
    <string name="edit_category_hint">Category</string>
    <string name="edit_category_empty">\?</string>
    <string name="edit_sub_category_hint">Sub Category</string>
    <string name="edit_type_hint">Type</string>
    <string name="edit_type_empty">\?</string>
    <string name="edit_sub_type_hint">Sub Type</string>
    <string name="edit_sub_type2_hint">Sub Type 2</string>
    <string name="edit_sub_type3_hint">Sub Type 3</string>
    <string name="edit_main_colour_hint">Main Colour</string>
    <string name="edit_main_colour_empty">\?</string>
    <string name="edit_main_colour_shade_hint">Main Colour Shade</string>
    <string name="edit_accent_colour_hint">Accent Colour</string>
    <string name="edit_size_hint">Size</string>
    <string name="edit_brand_hint">Brand</string>
    <string name="edit_shop_hint">Shop</string>
    <string name="edit_description_hint">Description</string>
    <string name="edit_note_hint">Note</string>
    <string name="edit_item_image_description">Item Image</string>
    <string name="edit_item_remove_image_button">Remove Image</string>
    <string name="title_uploading_or_removing_image">Uploading or Removing Image</string>
    <string name="press_back_while_editing">Press done to save or select delete from the options menu.</string>

    <!--Items-->
    <string name="title_activity_items">Items</string>
    <string name="no_items">No items.</string>
    <string name="expire_button_description">Expire item</string>
    <string name="item_expired">Item Expired</string>
    <string name="undo">Undo</string>
    <string name="item_unexpired">Item Revived</string>
    <string name="item_image">Item image</string>
    <string name="menu_sort">Sort</string>
    <string name="sort_title">Sort By</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Search for an item</string>
    <string name="sort_by_expiry">Expiry</string>
    <string name="sort_by_purchase_date">Purchase Date</string>
    <string name="add_item">Add Item</string>

    <!--ItemDetails-->
    <string name="title_activity_item_details">Details</string>
    <string name="menu_expire_item">Expire Item</string>
    <string name="menu_edit_item">Edit Item</string>
    <string name="purchase_details_title">Purchase Details</string>
    <string name="purchase_date">Purchase Date:&#160;</string>
    <string name="shop">Shop:&#160;</string>
    <string name="price_paid">Price Paid:&#160;</string>
    <string name="editDiscount">Discount:&#160;</string>
    <string name="item_details_title">Item Details</string>
    <string name="expiry_date">Expiry Date:&#160;</string>
    <string name="category">Category:&#160;</string>
    <string name="sub_category">Sub Category:&#160;</string>
    <string name="type">Type:&#160;</string>
    <string name="sub_type">Sub Type:&#160;</string>
    <string name="sub_type_2">Sub Type 2:&#160;</string>
    <string name="sub_type_3">Sub Type 3:&#160;</string>
    <string name="main_colour">Main Colour:&#160;</string>
    <string name="main_colour_shade">Main Colour Shade:&#160;</string>
    <string name="accent_colour">Accent Colour:&#160;</string>
    <string name="size">Size:&#160;</string>
    <string name="brand">Brand:&#160;</string>
    <string name="description">Description:&#160;</string>
    <string name="note">Note:&#160;</string>
    <string name="item_image_description">Item Image:&#160;</string>
    <string name="empty_value">-</string>
    <string name="date_format">dd/MMMM/yy</string>

    <!--About-->
    <string name="title_activity_about">About</string>
    <string name="title_item_reaper">Item Reaper</string>
    <string name="version">Version 1.0.7</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy"><a href="https://mvescovo.github.io/item-reaper/">Privacy Policy</a>.</string>
    <string name="title_attributions">Attributions</string>
    <string name="reaper_icon_attribution">Reaper and scythe icons made by Loc. Available on <a href="http://game-icons.net">http://game-icons.net</a>.</string>
    <string name="decapitation_sound_attribution">Decapitation sound effect by Mike Koenig. Available on <a href="http://soundbible.com">http://soundbible.com</a>.</string>

    <!--AdMob-->
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
