...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_price_paid"
                        style="@style/content_text_edit_item_currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_price_paid_hint"
                        android:inputType="numberDecimal"
                        tools:hint="@string/edit_price_paid_hint" />
...
                    style="@style/caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_expiry_date_title" />

                <Spinner
                    android:id="@+id/expiry_date_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_category"
                        style="@style/content_text_edit_item_standard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_category_hint"
                        android:inputType="textAutoComplete"
                        tools:hint="@string/edit_category_hint" />
...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_type"
                        style="@style/content_text_edit_item_standard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_type_hint"
                        android:inputType="textAutoComplete"
                        tools:hint="@string/edit_type_hint" />
...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_main_colour"
                        style="@style/content_text_edit_item_standard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_main_colour_hint"
                        android:inputType="textAutoComplete"
                        tools:hint="@string/edit_main_colour_hint" />
...
                        android:inputType="textAutoComplete"
                        tools:hint="@string/edit_note_hint" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="@dimen/edit_item_image_width"
                    android:layout_height="@dimen/edit_item_image_height"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:contentDescription="@string/edit_item_image_description"
                    android:visibility="gone" />

...
