<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/margin_vertical_items"
        android:paddingEnd="@dimen/margin_horizontal_items"
        android:paddingStart="@dimen/margin_horizontal_items"
        android:paddingTop="@dimen/margin_vertical_items" />

    <TextView
        android:id="@+id/no_items"
        style="@style/no_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_marginStart="@dimen/gutter_items"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/no_items"
        android:visibility="gone"
        tools:text="@string/no_items"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>
